# django_home

./: .env.sample  .gitignore  category.json  groups.json  product.json  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_version.py  0003_product_owner.py  0004_alter_product_options_product_publish.py
catalog/templates/catalog/: base.html  contacts.html  product_confirm_delete.html  product_details.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_base_menu.html
catalog/templatetags/: media_tags.py
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/: login.html
users/templates/users/: user_form.html
